--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
